2002-10-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/cytpe.h: Prefix identifiers used as args of inlines
	with '__', throughout.
	* include/inttypes.h: Likewise.
	* include/math.h: Likewise.
	* include/stdio.h: Likewise.
	* include/stdlib.h: Likewise.
	* include/wchar.h: Likewise.
	* include/wctype.h: Likewise.

2002-09-30  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/ctype.h (_tolower): Move inlined definition out of
	std namespace.
	(_tolower): Likewise.
	(is_wctype): Move into non-ANSI block. Qualify wctype_t with
	 __CSTD.

2002-09-29  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wchar.h (__VALIST): Correct typo in __GNUC__ guard.
	(FILE): Qualify with __CSTD when in global namespace.

2002-09-28  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/io.h: #include stddef.h with __need_wchat_t.
	* include/wchar.h (__VA_LIST): Define as __builtin_va_list
	or char*.

2002-09-27  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/stdio.h: Don't include stdarg.h.
	(__VA_LIST): Define as __builtin_va_list or char* instead.
	* include/stdarg.h: #include _mingw.h.
	In C++, #include_next<stdarg.g> in namespace __ginclude.
	Push va_list into std:: if whole file is needed, else
	push __gnuc_va_list into global.

2002-09-27  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wchar: #include sys/types.h in non-ANSI mode.
	* Protect _Wint_t typedef with __STRICT_ANSI__.  Remove from std
	namespace.
	Fix comment about string functions.

2002-09-27  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/setjmp.h: Use C++ c-header compatibility defines.
	* include/time.h; Don't include non-ISO sys/types.h.
	(struct tm): Define in __CSTD, if not already done.
	(_wasctime): Qualify tm with __CSTD.
	(_wctime): Qualify time_t with __CSTD.
	* include/wchar.h (ctype.h): Don't #include.
	(stdio.h): Don't #include.
	(time.h): Don't #include.
	(wctype.h): Include in C, but not in C++ in ANSI mode.